Fix for add attribute item not being visible

--- a/cortex/sheet.css
+++ b/cortex/sheet.css
@@ -365,7 +365,7 @@ ref
 	font-size: 32px;
 	color: #C50852;
 	content: "\f0fe";
-	position: absolute;
+//	position: absolute;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
